# marswm

./: Cargo.toml  INSTALLATION.md  LICENSE  README.md  SETUP.md  book.toml  build_and_run.sh  flake.nix  marswm.desktop  shell.nix  xephyr_test.sh  xephyr_xinitrc  xinitrc
.github/workflows/: clippy.yml  docs-github-pages.yml  flake.yml  rust.yml
docs/: SUMMARY.md  examples.md  introduction.md  marsbar.md  marswm.md  quickstart.md
docs/examples/: mars-help.md  mars-status.md  touchegg.md  wallpaper-daemon.md  xdg-xmenu.md
examples/: default.nix  mars-help.sh  mars-status.sh  marswm.desktop  touchegg.xml  wallpaper-daemon.sh  xdg-xmenu.py
libmars/: Cargo.toml
libmars/src/: configuration.rs  lib.rs  macros.rs  x11.rs
libmars/src/common/: error.rs  mod.rs
libmars/src/common/x11/: atoms.rs  mod.rs  window.rs
libmars/src/control/: mod.rs  x11.rs
libmars/src/draw/: canvas.rs  mod.rs  widget.rs
libmars/src/draw/x11/: canvas.rs  widget.rs
libmars/src/interfaces/: control.rs  draw.rs  mod.rs  wm.rs
libmars/src/utils/: configuration.rs  mod.rs
libmars/src/wm/: mod.rs
libmars/src/wm/x11/: backend.rs  client.rs  mod.rs  unmanaged.rs
libmars/src/x11/: atoms.rs  backend.rs  client.rs  draw.rs  window.rs
libmars/src/x11/draw/: canvas.rs  widget.rs
mars-relay/: Cargo.toml
mars-relay/src/: main.rs  menu.rs
marsbar/: Cargo.toml  README.md
marsbar/src/: config.rs  handlers.rs  main.rs  tray.rs
marswm/: Cargo.toml  README.md
marswm/src/: attributes.rs  bindings.rs  config.rs  layouts.rs  macros.rs  main.rs  marswm.rs  monitor.rs  rules.rs  workspace.rs
marswm/src/docs/: QUICKSTART.md  README.md  mod.rs  quick_start.rs
