[workspace]
members = [
	"marswm",
	"libmars",
	"mars-relay",
	"marsbar",
]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2021"
authors = ["jzbor"]
repository = "https://github.com/jzbor/marswm"
license-file = "LICENSE"
readme = "README.md"

[workspace.dependencies]
clap = { version = "4.3.11", features = ["derive"] }
libmars = { path = "./libmars", version = "0.5.2" }
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = { version = "0.9.16" }
x11 = { version = "2.19.1", features = ["xlib"] }


[profile.release]
lto = true
# codegen-units = 1
