[workspace]
members = [
	"marswm",
	"libmars",
	"mars-relay",
	"marsbar",
]
resolver = "2"

[workspace.package]
version = "0.5.3"
edition = "2021"
authors = ["jzbor"]
repository = "https://github.com/jzbor/marswm"
license-file = "LICENSE"
readme = "README.md"

[workspace.dependencies]
clap = { version = "4.5.17", features = ["derive"] }
libmars = { path = "./libmars", version = "0.5.3" }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml_ng = { version = "0.10.0" }
x11 = { version = "2.21.0", features = ["xlib"] }


[profile.release]
lto = true
# codegen-units = 1
