[workspace]
members = [
	"marswm",
	"libmars",
	"mars-relay",
	"marsbar",
]
resolver = "2"

[workspace.package]
version = "0.6.2"
edition = "2024"
authors = ["jzbor"]
repository = "https://github.com/jzbor/marswm"
license-file = "LICENSE"
readme = "README.md"

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
libmars = { path = "./libmars", version = "0.6.1" }
serde = { version = "1.0.216", features = ["derive"] }
serde_norway = { version = "0.9.41" }
x11 = { version = "2.21.0", features = ["xlib"] }


[profile.release]
lto = true
# codegen-units = 1
