[package]
name = "libmars"
description = "Library to build window managers and accompanying utilities"
workspace = ".."

# inherit the following keys from workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
serde_yaml = { workspace = true, optional = true }
x11 = { workspace = true, features = ["xinerama", "xrandr", "xft"] }
xdg = { version = "2.4.1", optional = true }
x11rb = { version = "0.13.0", features = ["all-extensions"], optional = true }

[features]
configuration = ["dep:serde", "dep:serde_yaml", "dep:xdg"]
platform-x11rb = ["dep:x11rb"]
default = ["platform-x11rb"]

