[package]
name = "mars-relay"
description = "Utility to control and automate a window manager"
workspace = ".."

# inherit the following keys from workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
clap = { workspace = true }
x11 = { workspace = true }
libmars = { workspace = true }
