[package]
name = "marsbar"
description = "Task bar for marswm (and other EWMH-compliant window managers)"
workspace = ".."

# inherit the following keys from workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
x11 = { workspace = true }
libmars = { workspace = true, features = ["configuration"] }
