[package]
name = "marswm"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
x11 = { version = "2.19.1", features = ["xlib", "xinerama"] }

[dependencies.libmars]
path = "../libmars"
version = "0.1.0"
features = ["configuration"]
