[package]
name = "marswm"
description = "A simple and modern dynamic tiling window manager"
readme = "README.md"
workspace = ".."

# inherit the following keys from workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
clap = { workspace = true }
libmars = { workspace = true, features = ["configuration"] }
serde = { workspace = true }
x11 = { workspace = true }
